--- a/time_tracker.info.yml
+++ b/time_tracker.info.yml
@@ -4,7 +4,7 @@ description: Provides time tracking functionality nodes and comments.
 package: Time Tracker
 core: 8.x
 
-configure: entity.time_tracker_activity.type_list
+configure: entity.time_tracker_activity.collection
 #dependencies:
 #  - views
 #  - views_calc
