--- a/time_tracker.links.menu.yml
+++ b/time_tracker.links.menu.yml
@@ -1,8 +1,14 @@
-time_tracker.activity_colelction:
+entity.time_tracker_activity.collection:
   title: 'Time tracker activity types'
   route_name: entity.time_tracker_activity.collection
   parent: system.admin_structure
   description: 'Manage time tracker activity types.'
+
+entity.time_tracker_activity.admin_form:
+  title: 'Time tracker activity types settings'
+  route_name: entity.time_tracker_activity.collection
+  parent: entity.time_tracker_activity.collection
+  description: 'Manage time tracker activity types settings.'
 
 #time_tracker.admin.global_settings:
 #  path: '/admin/config/time_tracker/global_settings'
