--- a/time_tracker.links.task.yml
+++ b/time_tracker.links.task.yml
@@ -1,3 +1,13 @@
+entity.time_tracker_activity.collection_tab:
+  title: 'List'
+  route_name: entity.time_tracker_activity.collection
+  base_route: entity.time_tracker_activity.collection
+
+entity.time_tracker_activity.admin_form_tab:
+  title: 'Settings'
+  route_name: entity.time_tracker_activity.admin_form
+  base_route: entity.time_tracker_activity.collection
+
 #time_tracker.admin.global_settings.manage:
 #  title: 'Global Settings'
 #  route_name: time_tracker.admin.global_settings.manage
