--- a/time_tracker.links.task.yml
+++ b/time_tracker.links.task.yml
@@ -8,6 +8,31 @@ entity.time_tracker_activity.admin_form_tab:
   route_name: entity.time_tracker_activity.admin_form
   base_route: entity.time_tracker_activity.collection
 
+time_tracker_entry.view:
+  route_name: entity.time_tracker_entry.canonical
+  base_route: entity.time_tracker_entry.canonical
+  title: View
+
+
+time_tracker_entry.page_edit:
+  route_name: entity.time_tracker_entry.edit_form
+  base_route: entity.time_tracker_entry.canonical
+  title: Edit
+
+
+time_tracker_entry.delete_confirm:
+  route_name:  entity.time_tracker_entry.delete_form
+  base_route:  entity.time_tracker_entry.canonical
+  title: Delete
+  weight: 10
+
+entity.time_tracker_entry.collection:
+  title: 'Time Entries'
+  route_name: entity.time_tracker_entry.collection
+  base_route: system.admin_content
+  weight: 10
+
+
 #time_tracker.admin.global_settings.manage:
 #  title: 'Global Settings'
 #  route_name: time_tracker.admin.global_settings.manage
@@ -22,42 +47,7 @@ entity.time_tracker_activity.admin_form_tab:
 #  parent_id: time_tracker.admin.entity_settings
 #  weight: -10
 #
-#  $items['admin/config/time_tracker/activities'] = array(
-#    'title' => 'Activities',
-#    'description' => 'Manage Time Tracker Activity Entities',
-#    'page callback' => 'drupal_get_form',
-#    'page arguments' => array('time_tracker_activity_table_form'),
-#    'access arguments' => array('administer time tracker'),
-#    'file' => 'time_tracker.admin.inc',
-#  );
-#  $items['admin/config/time_tracker/activities/list'] = array(
-#    'title' => 'Activities',
-#    'type' => MENU_DEFAULT_LOCAL_TASK,
-#    'weight' => -10,
-#  );
-#  $items['admin/config/time_tracker/activity/delete/%'] = array(
-#    'title' => 'Delete Activity',
-#    'page callback' => 'drupal_get_form',
-#    'page arguments' => array('time_tracker_delete_activity_confirm', 5),
-#    'access arguments' => array('administer time tracker'),
-#    'file' => 'time_tracker.admin.inc',
-#  );
-#  $items['time_entry/edit/%time_tracker_time_entry'] = array(
-#    'title' => 'Time Entry',
-#    'description' => 'Edit a Time Entry',
-#    'page callback' => 'drupal_get_form',
-#    'page arguments' => array('time_tracker_time_entry_form', 1, 2),
-#    'access callback' => 'time_tracker_access',
-#    'access arguments' => array(1, 2),
-#  );
-#  $items['time_entry/delete/%time_tracker_time_entry'] = array(
-#    'title' => 'Time Entry',
-#    'description' => 'Delete a Time Entry',
-#    'page callback' => 'drupal_get_form',
-#    'page arguments' => array('time_tracker_entry_confirm_delete', 2),
-#    'access callback' => 'time_tracker_access',
-#    'access arguments' => array(1, 2),
-#  );
+
 #  $items['time_entry/add/%node'] = array(
 #    'title' => 'Time Entry',
 #    'description' => 'Add a Time Entry',
