--- a/time_tracker.links.menu.yml
+++ b/time_tracker.links.menu.yml
@@ -1,16 +1,26 @@
+time_tracker.admin_form:
+  title: 'Time tracker'
+  route_name: time_tracker.admin_form
+  parent: system.admin_structure
+  description: 'Manage time tracker.'
+
 entity.time_tracker_activity.collection:
   title: 'Time tracker activity types'
   route_name: entity.time_tracker_activity.collection
-  parent: system.admin_structure
+  parent: time_tracker.admin_form
   description: 'Manage time tracker activity types.'
 
 entity.time_tracker_activity.admin_form:
   title: 'Time tracker activity types settings'
   route_name: entity.time_tracker_activity.collection
-  parent: entity.time_tracker_activity.collection
+  parent: time_tracker.admin_form
   description: 'Manage time tracker activity types settings.'
 
-
+time_tracker_entry.admin_form:
+  title: Time tracker entries Settings
+  description: 'Configure tracker entries entity'
+  route_name:  entity.time_tracker_entry.admin_form
+  parent: time_tracker.admin_form
   
 #time_tracker.admin.global_settings:
 #  path: '/admin/config/time_tracker/global_settings'
