--- a/time_tracker.links.task.yml
+++ b/time_tracker.links.task.yml
@@ -3,6 +3,12 @@ time_tracker.admin_form:
   route_name: time_tracker.admin_form
   base_route: time_tracker.admin_form
 
+time_tracker.entity_settings_page:
+  title: 'Entities'
+  description: 'Configure time tracking for entities.'
+  route_name: time_tracker.entity_settings_page
+  base_route: time_tracker.admin_form
+
 entity.time_tracker_activity.collection_tab:
   title: 'Activity'
   route_name: entity.time_tracker_activity.collection
